Add better solution

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
 	<div id="button_div"></div>
-	<div id="barchart_div"></div>
+	<div id="record_div"></div>
 	<div id="detail_div"></div>
 
   </body>
