Implement visual changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 
 	<div id="button_div"></div>
+  <div id="input_div"></div>
 	<div id="record_div"></div>
 	<div id="detail_div"></div>
 
