Add double sliders

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     
   </head>
   <body>
-
-	<div id="button_div"></div>
-  <div id="input_div"></div>
-	<div id="record_div"></div>
-	<div id="detail_div"></div>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://unpkg.com/d3-simple-slider"></script>
+	  <div id="button_div"></div>
+    <div id="input_div"></div>
+	  <div id="record_div"></div>
+	  <div id="detail_div"></div>
 
   </body>
